--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Customer_Web_Project-9114edf7-5120-4be1-ab54-81cd16b1045c;AttachDbFilename=|DataDirectory|\aspnet-Customer_Web_Project-9114edf7-5120-4be1-ab54-81cd16b1045c.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Customer_Web_Project-9114edf7-5120-4be1-ab54-81cd16b1045c;AttachDbFilename=|DataDirectory|\aspnet-Customer_Web_Project-9114edf7-5120-4be1-ab54-81cd16b1045c.mdf;Integrated Security=SSPI"
+      providerName="System.Data.SqlClient" />
+    <add name="TestConnectionString" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=Test;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
